feat: standardize module prefix in mutation and per-test diagnostics